@@ -7,6 +7,8 @@
   * Fixed bug where conditions that disallowed using $in, $all and $any with an array
   * Bumped version of validatable so :if validation option supports symbol/string to proc.
   * Document#create with no attributes now creates a document as long as it is valid
+  * Now defining accessor methods when key is declared rather than using method missing and all that jazz
+  * Attributes now have boolean methods that return true or false based on whether they have value present
 
 0.2.0 7/7/2009
 * 2 major additions (observers, associations), several minor additions, and a few bug fixes
